.config/waybar/style.css
* {
    /* `otf-font-awesome` is required to be installed for icons */
    /*font-family: JetBrains Mono Nerd;*/
    font-family: JetBrainsMono NF;
    font-size: 0.875rem;
}

window#waybar {
    background-color: transparent;
    color: #ffffff;
    transition-property: background-color;
    transition-duration: .5s;
}

window#waybar.hidden {
    opacity: 0.2;
}

/*
window#waybar.empty {
    background-color: transparent;
}
window#waybar.solo {
    background-color: #FFFFFF;
}
*/

window#waybar.termite {
    background-color: #3F3F3F;
}

window#waybar.chromium {
    background-color: #000000;
    border: none;
}

button {
    /* Use box-shadow instead of border so the text isn't offset */
    box-shadow: inset 0 -3px transparent;
    /* Avoid rounded borders under each button name */
    border: none;
    border-radius: 0;
}

/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
button:hover {
    background: inherit;
    box-shadow: inset 0 -3px #ffffff;
}

#workspaces button {
    padding: 0 5px;
    background-color: transparent;
    color: #ffffff;
}

#workspaces button:hover {
    background: rgba(0, 0, 0, 0.2);
}

#workspaces button.focused {
    background-color: #64727D;
    box-shadow: inset 0 -3px #ffffff;
}

#workspaces button.urgent {
    background-color: #eb4d4b;
}

#mode {
    background-color: #64727D;
    border-bottom: 3px solid #ffffff;
}

#window,
#clock,
#battery,
#cpu,
#memory,
#disk,
#temperature,
#backlight,
#network,
#pulseaudio,
#wireplumber,
#custom-media,
#custom-power,
#tray,
#mode,
#idle_inhibitor,
#scratchpad,
#mpd {
    border: 0px solid transparent;
    border-radius: 1em;
    color: #ffffff;
    padding: 0 0.875em;
    background-color: rgba(80, 80, 80, 0.5);
}

#window,
#workspaces {
    margin: 0 4px;
}

/* If workspaces is the leftmost module, omit left margin */
.modules-left > widget:first-child > #workspaces {
    margin-left: 0;
}

/* If workspaces is the rightmost module, omit right margin */
.modules-right > widget:last-child > #workspaces {
    margin-right: 0;
}

#custom-power { 
    background-color: rgba(10, 10, 10, 0.2);
}

#window {
		background-color: rgba(80, 80, 80, 0.8);
}

#clock {
    background-color: rgba(10, 10, 10, 0.2);
}

#battery {
    background-color: rgba(10, 10, 10, 0.2);
    transition-property: background-color;
    transition-duration: .5s;
}

#battery.charging, #battery.plugged {
    background-color: alpha(#29ad60, 0.2);
}

#battery.warning:not(.charging){
    background-color: alpha(#ffa000, 0.2);
}

@keyframes blink {
    to {
        background-color: #ffffff;
        color: #000000;
    }
}

#battery.critical:not(.charging) {
    background-color: alpha(#f53c3c, 0.2);
    color: #ffffff;
    animation-name: blink;
    animation-duration: 0.5s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

label:focus {
    background-color: alpha(#000000, 0.2);
}

#cpu {
    background-color: rgba(10, 10, 10, 0.2);
}

#memory {
    background-color: rgba(10, 10, 10, 0.2);
}

#memory.warning {
    background-color: alpha(#ffa000, 0.2);
}

#memory.critical {
    background-color: alpha(#f53c3c, 0.2);
}

#disk {
    background-color: rgba(10, 10, 10, 0.2);
}

#backlight {
    background-color: rgba(10, 10, 10, 0.2);
}

#network {
    background-color: rgba(10, 10, 10, 0.2);
}

#network.disconnected {
    background-color: rgba(10, 10, 10, 0.2);
}

#pulseaudio {
    background-color: rgba(10, 10, 10, 0.2);
}

#pulseaudio.muted {
}

#wireplumber {
    background-color: #fff0f5;
    color: #000000;
}

#wireplumber.muted {
    background-color: #f53c3c;
}

#custom-media {
    background-color: #66cc99;
    color: #2a5c45;
    min-width: 100px;
}

#custom-media.custom-spotify {
    background-color: #66cc99;
}

#custom-media.custom-vlc {
    background-color: #ffa000;
}

#temperature {
    background-color: rgba(10, 10, 10, 0.2);
    transition-property: background-color;
    transition-duration: .5s;
}

#temperature.critical {
    background-color: alpha(#eb4d4b, 0.2);
}

#tray {
    background-color: rgba(10, 10, 10, 0.2);
}

#tray > .passive {
    -gtk-icon-effect: dim;
}

#tray > .needs-attention {
    -gtk-icon-effect: highlight;
    background-color: #eb4d4b;
}

#idle_inhibitor {
    background-color: rgba(10, 10, 10, 0.2);
    transition-property: background-color;
    transition-duration: 1s;
}

#idle_inhibitor.activated {
    background-color: alpha(#ecf0f1, 0.2);
    color: rgb(10, 10, 10);
}

#mpd {
    background-color: #66cc99;
    color: #2a5c45;
}

#mpd.disconnected {
    background-color: #f53c3c;
}

#mpd.stopped {
    background-color: #90b1b1;
}

#mpd.paused {
    background-color: #51a37a;
}

#language {
    background: #00b093;
    color: #740864;
    padding: 0 5px;
    margin: 0 5px;
    min-width: 16px;
}

#keyboard-state {
    background: #97e1ad;
    color: #000000;
    padding: 0 0px;
    margin: 0 5px;
    min-width: 16px;
}

#keyboard-state > label {
    padding: 0 5px;
}

#keyboard-state > label.locked {
    background: rgba(0, 0, 0, 0.2);
}

#scratchpad {
    background: rgba(0, 0, 0, 0.2);
}

#scratchpad.empty {
	background-color: transparent;
}

